@@ -13,6 +13,8 @@
                  [org.clojure/core.async  "0.3.443"]
                  [reagent "0.7.0" :exclusions [cljsjs/react cljsjs/react-dom cljsjs/react-dom-server cljsjs/create-react-class]]]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
   :plugins [[lein-figwheel "0.5.14"]
             [lein-cljsbuild "1.1.7" :exclusions [[org.clojure/clojure]]]]
 
